@@ -1,15 +1,17 @@
 package net.bounceme.chronos.inteligenciaartificial.util;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import org.primefaces.model.file.UploadedFile;
 import org.springframework.ai.chat.messages.Message;
 
 import lombok.experimental.UtilityClass;
 import net.bounceme.chronos.inteligenciaartificial.dto.MessageDTO;
 import net.bounceme.chronos.inteligenciaartificial.model.ChatMessage;
+import net.bounceme.chronos.inteligenciaartificial.util.Constants.StatusImage;
 
 @UtilityClass
 public class AIUtils {
@@ -32,7 +34,7 @@ public class AIUtils {
 
 	    return IntStream.range(0, chatMessages.size() / 2)
 	            .mapToObj(i -> crearDTO(chatMessages.get(i * 2), chatMessages.get(i * 2 + 1)))
-	            .collect(Collectors.toList());
+	            .toList();
 	}
 	
 	private MessageDTO crearDTO(ChatMessage request, ChatMessage response) {
